# equationsolver

./: equationsolver.cabal
main/: Main.hs
src/EquationSolver/: Attoparsec.hs  AttoparsecParser.hs  Common.hs  Flow.hs  Lexer.hs  ManualParser.hs  Parser.hs  Solver.hs
test/EquationSolver/: LexerSpec.hs  ParserSpec.hs
