name:                equationsolver
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             Apache-2.0
license-file:        LICENSE
author:              Jan Machacek
maintainer:          jan.machacek@gmail.com
-- copyright:           
category:            Language
build-type:          Simple
cabal-version:       >=1.8

library
  -- main-is:
  -- other-modules:       
  exposed-modules:
      EquationSolver.Common
    , EquationSolver.AttoparsecParser
    , EquationSolver.ManualParser
  hs-source-dirs:
      src
  build-depends:       
      base == 4.*
    , word8 >= 0.0.4
    , bytestring >= 0.10
    , attoparsec >= 0.10.4
    , attoparsec-expr >= 0.1
    , mtl >= 2.1.2

executable equationsolver-main
  main-is: Main.hs
  hs-source-dirs: main
  build-depends:
      equationsolver
    , base == 4.*
    , bytestring >= 0.10
    , amqp >= 0.7.0

test-suite spec
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall -Werror
  hs-source-dirs:
      test
  main-is:
      Spec.hs
  build-depends:
      equationsolver
    , base    == 4.*
    , hspec   >= 1.3